# CppRMRT

./: .clang-format  .gitignore  CMakeFiles.txt  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cicd-schema.yml  learn-github-actions.yml
data/models/low_poly_tree/: low_poly_tree.mtl
data/models/tea_cup/: tea_cup.mtl
data/shaders/default/: vertex.glsl
data/shaders/obj_model/: fragment.glsl  vertex.glsl
data/shaders/rm/: fragment.glsl  fragment1.glsl  fragment_src.glsl  vertex.glsl
data/shaders/rm_render/: fragment.glsl  vertex.glsl
data/shaders/shape/: fragment.glsl  vertex.glsl
data/shaders/sphere/: fragment.glsl  vertex.glsl
data/shaders/test/: fragment.glsl  vertex.glsl
doc/: final_version.pptx  plans.md  presentation.pptx  render.md  render.txt
src/: def.hpp  main.cpp
src/render/: figure_render.cpp  figure_render.hpp  figure_scene.cpp  figure_scene.hpp  render.cpp  render.hpp
src/render/primitives/: primitive.cpp  primitive.hpp  vertex_array.hpp
src/render/scenes/: scene.cpp  scene.hpp
src/render/shaders/: shader.cpp  shader.hpp
src/render/src/buffers/: buffer.cpp  buffer.hpp
src/render/src/figure_shaders/common_render/: fragment.glsl  vertex.glsl
src/render/src/figures/: figure.cpp  figure.hpp  figure_material.cpp  figure_material.hpp  figure_render.cpp  figure_render.hpp  figure_scene.cpp  figure_scene.hpp  figure_transformation.cpp  figure_transformation.hpp
src/render/src/models/: model.cpp  model.hpp
src/render/src/primitives/: primitive.cpp  primitive.hpp  vertex_array.cpp  vertex_array.hpp
src/render/src/resources/buffers/: buffer.cpp  buffer.hpp
src/render/src/resources/models/: model.cpp  model.hpp
src/render/src/resources/primitives/: primitive.cpp  primitive.hpp
src/render/src/resources/scenes/: scene.cpp  scene.hpp
src/render/src/resources/shaders/: shader.cpp  shader.hpp
src/render/src/scenes/: scene.cpp  scene.hpp
src/render/src/shaders/: shader.cpp  shader.hpp
src/render/src/units/: unit.cpp  unit.hpp
src/scenes/DV1/: rm_figures.hpp  rm_shd_unit.cpp  rm_shd_unit.hpp
src/scenes/SK4/: test_unit.cpp  test_unit.hpp
src/units/DV1/: mth.h  rm_figures.cpp  rm_figures.hpp  rm_shd_unit.cpp  rm_shd_unit.hpp
src/units/SK4/: test_unit.cpp  test_unit.hpp
src/utilities/camera/: camera.hpp
src/utilities/cameras/: camera.hpp
src/utilities/math/: math.hpp  math_def.hpp
src/utilities/math/cameras/: camera.hpp
src/utilities/math/matrices/: matr4.hpp
src/utilities/math/vectors/: vec2.hpp  vec3.hpp
tests/: doctest_main.cpp  run_tests.sh
tests/math/: math_test_utils.hpp  matrices_test.cpp  vectors_test.cpp
